--- a/Data/userInfo.php.example
+++ b/Data/userInfo.php.example
@@ -7,5 +7,6 @@
     'train_password' => 'xxx', //12306密码
     'my_name' => 'xxx', //名字
     'my_card' => 'xxxx***********xxx', //身份证
-    'my_phone' => 'xxx****xxxx' //手机号
+    'my_phone' => 'xxx****xxxx', //手机号
+    'user_auth' => 'xxxx' //用户身份验证密文，在checkOrderInfo接口中提取请求参数passengerTicketStr 的 N, 后面的字符串
 );
