--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
     "autoload": {
         "psr-4": {
             "App\\": "App/"
-        }
+        },
+        "files": [
+          "App/helper.php"
+        ]
     }
 }
